--- a/Day2/app/src/main/res/layout/activity_main.xml
+++ b/Day2/app/src/main/res/layout/activity_main.xml
@@ -10,4 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <Button
+        android:id="@+id/addNoteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="16dp"
+        android:onClick="onAddNoteButtonClick" />
+
 </RelativeLayout>
