back/forward buttons functionalities, end of the project

--- a/Day5/app/src/main/res/layout/fragment_list.xml
+++ b/Day5/app/src/main/res/layout/fragment_list.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <ProgressBar
         android:id="@+id/loading"
@@ -19,5 +20,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Button
+        android:id="@+id/forward"
+        android:layout_marginStart="18dp"
+        android:text="Forward"
+        android:layout_width="105dp"
+        android:layout_height="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/backward"
+        app:layout_constraintBottom_toBottomOf="@+id/recycler"
+        />
+
+    <Button
+        android:id="@+id/backward"
+        android:layout_width="105dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="18dp"
+        android:text="Back"
+        app:layout_constraintEnd_toEndOf="@+id/forward"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/recycler" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
