--- a/MovieProject/app/src/main/res/layout/item_movie.xml
+++ b/MovieProject/app/src/main/res/layout/item_movie.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="162dp"
+    android:layout_height="177dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -10,11 +10,30 @@
         android:id="@+id/photo"
         android:layout_marginTop="6dp"
         android:layout_marginStart="10dp"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
+        android:layout_width="110dp"
+        android:layout_height="165dp"
+
+        app:layout_constraintBottom_toBottomOf="@+id/movie_description"
         app:layout_constraintRight_toLeftOf="@id/movie"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <ImageButton
+        android:id="@+id/heart_in_list"
+        android:src="@drawable/heart_shape_outlined"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:background="@color/White_100"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="6dp"
+        app:layout_constraintStart_toEndOf="@+id/movie"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="6dp"
+        android:contentDescription="heart" />
 
 
     <TextView
@@ -22,29 +41,67 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/textview"
-        android:textSize="16sp"
+        android:textSize="18sp"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:layout_marginEnd="10dp"
         android:textStyle="bold"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="6dp"
         android:layout_marginStart="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/release_date"
+        app:layout_constraintEnd_toStartOf="@id/heart_in_list"
         app:layout_constraintStart_toEndOf="@+id/photo"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/photo" />
+
+    <TextView
+        android:id="@+id/release_date"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:text="release_date"
+        android:gravity="center_horizontal"
+        android:textColor="@color/White_100"
+        android:textSize="11sp"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintStart_toEndOf="@+id/photo"
+        android:background="@drawable/rounded_corners"
+        app:layout_constraintBottom_toTopOf="@id/genreContainer"
+        app:layout_constraintTop_toBottomOf="@+id/movie" />
 
     <TextView
         android:id="@+id/movie_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="6dp"
         android:maxLines="5"
         android:text="TextView"
-        android:textSize="12sp"
-
+        android:textSize="14sp"
+        android:ellipsize="end"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="6dp"
+        app:layout_constraintTop_toBottomOf="@id/genreContainer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/photo"
-        app:layout_constraintTop_toBottomOf="@+id/movie" />
+        app:layout_constraintBottom_toBottomOf="@+id/photo" />
+
+    <LinearLayout
+        android:id="@+id/genreContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:orientation="horizontal"
+        android:layout_marginBottom="6dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/movie_description"
+        app:layout_constraintStart_toEndOf="@+id/photo"
+        app:layout_constraintTop_toBottomOf="@+id/release_date">
+
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
