--- a/MovieProject/app/src/main/res/layout/item_movie.xml
+++ b/MovieProject/app/src/main/res/layout/item_movie.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="177dp"
+    android:layout_height="192dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -10,14 +10,11 @@
         android:id="@+id/photo"
         android:layout_marginTop="6dp"
         android:layout_marginStart="10dp"
-        android:layout_width="110dp"
-        android:layout_height="165dp"
-
+        android:layout_width="120dp"
+        android:layout_height="180dp"
         app:layout_constraintBottom_toBottomOf="@+id/movie_description"
-        app:layout_constraintRight_toLeftOf="@id/movie"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <ImageButton
         android:id="@+id/heart_in_list"
@@ -28,7 +25,7 @@
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@+id/movie"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginEnd="10dp"
@@ -46,7 +43,6 @@
         android:ellipsize="end"
         android:layout_marginEnd="10dp"
         android:textStyle="bold"
-        android:layout_marginTop="6dp"
         android:layout_marginStart="10dp"
         app:layout_constraintBottom_toTopOf="@id/release_date"
         app:layout_constraintEnd_toStartOf="@id/heart_in_list"
@@ -64,7 +60,7 @@
         android:maxLines="1"
         android:ellipsize="end"
         android:layout_marginEnd="10dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="2dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toEndOf="@+id/photo"
         android:background="@drawable/rounded_corners"
@@ -76,10 +72,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="0dp"
         android:maxLines="5"
+        android:textColor="@color/material_color_blue_grey_500"
         android:text="TextView"
-        android:textSize="14sp"
+        android:textSize="13sp"
         android:ellipsize="end"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="6dp"
@@ -93,7 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="17dp"
         android:orientation="horizontal"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
