--- a/MovieProject/app/src/main/res/layout/fragment_detail.xml
+++ b/MovieProject/app/src/main/res/layout/fragment_detail.xml
@@ -8,24 +8,35 @@
     <ImageView
         android:id="@+id/detail_photo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="220dp"
         android:contentDescription="@string/moviephoto"
         android:foreground="@drawable/gradient_foreground"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf = "parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <ProgressBar
+        android:id="@+id/loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/White_100"
+        android:progressBackgroundTint="@color/White_100"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageButton
-        android:id="@+id/heart_in_list"
+        android:id="@+id/heart_in_detail"
         android:src="@drawable/heart_shape_outlined"
         android:layout_width="40dp"
+        android:visibility="gone"
         android:layout_height="40dp"
         android:background="@color/White_100"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/detail_photo"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="6dp"
@@ -36,7 +47,6 @@
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/textview"
         android:textSize="30sp"
         android:maxLines="2"
         android:ellipsize="end"
@@ -45,21 +55,22 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/detail_photo"
-        app:layout_constraintEnd_toStartOf="@id/heart_in_list"
+        app:layout_constraintEnd_toStartOf="@id/heart_in_detail"
         app:layout_constraintStart_toStartOf="@id/detail_photo"/>
+
+
 
     <TextView
         android:id="@+id/release_date"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:text="release_date"
         android:gravity="center_horizontal"
         android:textColor="@color/White_100"
         android:textSize="15sp"
         android:maxLines="1"
-
         android:layout_marginStart="10dp"
         android:ellipsize="end"
+        android:visibility="gone"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,16 +84,13 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:textColor="@color/material_color_blue_grey_300"
-        android:text="TextView"
         android:textSize="20sp"
         android:ellipsize="end"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="6dp"
         app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/release_date" />
 
-
-
-
-    />
 </androidx.constraintlayout.widget.ConstraintLayout>
