--- a/MovieProject/app/src/main/res/layout/item_movie.xml
+++ b/MovieProject/app/src/main/res/layout/item_movie.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/heart_in_list"
+        android:id="@+id/heart_in_detail"
         android:src="@drawable/heart_shape_outlined"
         android:layout_width="25dp"
         android:layout_height="25dp"
@@ -45,7 +45,7 @@
         android:textStyle="bold"
         android:layout_marginStart="10dp"
         app:layout_constraintBottom_toTopOf="@id/release_date"
-        app:layout_constraintEnd_toStartOf="@id/heart_in_list"
+        app:layout_constraintEnd_toStartOf="@id/heart_in_detail"
         app:layout_constraintStart_toEndOf="@+id/photo"
         app:layout_constraintTop_toTopOf="@id/photo" />
 
