--- a/MovieProject/app/src/main/res/layout/fragment_detail.xml
+++ b/MovieProject/app/src/main/res/layout/fragment_detail.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/detail_photo"
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:contentDescription="@string/moviephoto"
         android:foreground="@drawable/gradient_foreground"
         app:layout_constraintTop_toTopOf="parent"
@@ -56,7 +56,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/detail_photo"
         app:layout_constraintEnd_toStartOf="@id/heart_in_detail"
-        app:layout_constraintStart_toStartOf="@id/detail_photo"/>
+        app:layout_constraintStart_toStartOf="parent"/>
 
 
 
