--- a/MovieProject/app/src/main/res/layout/fragment_favorites.xml
+++ b/MovieProject/app/src/main/res/layout/fragment_favorites.xml
@@ -19,6 +19,7 @@
         app:layout_constraintRight_toRightOf="parent">
 
         <include layout="@layout/toolbar_custom_layout" />
+
     </androidx.appcompat.widget.Toolbar>
 
 
@@ -26,6 +27,7 @@
         android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -42,4 +44,5 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
