--- a/MovieProject/app/src/main/res/layout/toolbar_custom_layout.xml
+++ b/MovieProject/app/src/main/res/layout/toolbar_custom_layout.xml
@@ -11,9 +11,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
+        android:scaleType="centerCrop"
+        android:gravity="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_margin="16dp"
         android:queryHint="Search movies..." />
 
     <ImageButton
