--- a/MovieProject/app/src/main/res/layout/item_movie.xml
+++ b/MovieProject/app/src/main/res/layout/item_movie.xml
@@ -67,6 +67,37 @@
         app:layout_constraintBottom_toTopOf="@id/genreContainer"
         app:layout_constraintTop_toBottomOf="@+id/movie" />
 
+
+    <ImageView
+        android:id="@+id/star"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="3dp"
+        app:layout_constraintStart_toEndOf="@+id/release_date"
+        android:background="@drawable/star_outlined"
+        app:layout_constraintBottom_toTopOf="@id/genreContainer"
+        app:layout_constraintTop_toBottomOf="@+id/movie" />
+
+
+    <TextView
+        android:id="@+id/vote_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:textColor="@color/material_color_blue_grey_500"
+        android:textSize="12sp"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintStart_toEndOf="@+id/star"
+        app:layout_constraintBottom_toTopOf="@id/genreContainer"
+        app:layout_constraintTop_toBottomOf="@+id/movie" />
+
     <TextView
         android:id="@+id/movie_description"
         android:layout_width="0dp"
