--- a/MovieProject/app/src/main/res/layout/discovered_layout.xml
+++ b/MovieProject/app/src/main/res/layout/discovered_layout.xml
@@ -19,7 +19,7 @@
         app:layout_constraintRight_toRightOf="parent">
 
         <TextView
-            android:id="@+id/toolbarFavorites"
+            android:id="@+id/toolbarDiscovered"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
