--- a/MovieProject/app/src/main/res/layout/fragment_detail.xml
+++ b/MovieProject/app/src/main/res/layout/fragment_detail.xml
@@ -1,148 +1,176 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <ImageView
-        android:id="@+id/detail_photo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/moviephoto"
-        android:foreground="@drawable/gradient_foreground"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf = "parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-
+    android:layout_height="match_parent"
+>
 
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/White_100"
+        android:background="#00000000"
         android:progressBackgroundTint="@color/White_100"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <ImageButton
-        android:id="@+id/heart_in_detail"
-        android:src="@drawable/heart_shape_outlined"
-        android:layout_width="40dp"
-        android:visibility="gone"
-        android:layout_height="40dp"
-        android:background="@color/White_100"
-        android:scaleType="centerCrop"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/detail_photo"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="6dp"
-        android:contentDescription="heart" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:maxLines="2"
-        android:ellipsize="end"
-        android:layout_marginEnd="10dp"
-        android:textStyle="bold"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/detail_photo"
-        app:layout_constraintEnd_toStartOf="@id/heart_in_detail"
-        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#00000000"
+        android:elevation="4dp"
+        android:theme="@style/AppTheme.Toolbar"
+        app:navigationIcon="?attr/homeAsUpIndicator"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/detail_photo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/moviephoto"
+            android:foreground="@drawable/gradient_foreground"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf = "parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 
-    <ImageView
-        android:id="@+id/star"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:contentDescription="star"
-        android:foreground="@drawable/star_outlined"
-        android:gravity="center_horizontal"
-        app:layout_constraintStart_toEndOf="@id/release_date"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        android:layout_marginBottom="6dp"/>
+        <ImageButton
+            android:id="@+id/heart_in_detail"
+            android:src="@drawable/heart_shape_outlined"
+            android:layout_width="40dp"
+            android:visibility="gone"
+            android:layout_height="40dp"
+            android:background="@color/White_100"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+
+            app:layout_constraintTop_toBottomOf="@id/detail_photo"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="6dp"
+            android:contentDescription="heart" />
 
 
-    <TextView
-        android:id="@+id/vote_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:textColor="@color/material_color_blue_grey_500"
-        app:layout_constraintStart_toEndOf="@id/star"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="10dp"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        android:layout_marginEnd="6dp"
-        android:layout_marginBottom="2dp"/>
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:maxLines="2"
+            android:ellipsize="end"
+            android:visibility="gone"
+            android:layout_marginEnd="10dp"
+            android:textStyle="bold"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/detail_photo"
+            app:layout_constraintEnd_toStartOf="@id/heart_in_detail"
+            app:layout_constraintStart_toStartOf="parent"/>
 
 
-    <TextView
-        android:id="@+id/release_date"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textColor="@color/White_100"
-        android:textSize="15sp"
-        android:maxLines="1"
-        android:layout_marginStart="10dp"
-        android:ellipsize="end"
-        android:visibility="gone"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toStartOf="@id/star"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="@drawable/rounded_corners"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
-
-    <TextView
-        android:id="@+id/movie_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/material_color_blue_grey_300"
-        android:textSize="20sp"
-        android:ellipsize="end"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="6dp"
-        app:layout_constraintStart_toStartOf="parent"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/genreContainer" />
+        <ImageView
+            android:id="@+id/star"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:contentDescription="star"
+            android:foreground="@drawable/star_outlined"
+            android:gravity="center_horizontal"
+            app:layout_constraintStart_toEndOf="@id/release_date"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            android:layout_marginBottom="6dp"/>
 
 
-    <LinearLayout
-        android:id="@+id/genreContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:orientation="horizontal"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/movie_description"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/release_date">
+        <TextView
+            android:id="@+id/vote_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:textColor="@color/material_color_blue_grey_500"
+            app:layout_constraintStart_toEndOf="@id/star"
+            android:layout_marginStart="3dp"
+            android:layout_marginTop="10dp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            android:layout_marginEnd="6dp"
+            android:layout_marginBottom="2dp"/>
 
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/release_date"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textColor="@color/White_100"
+            android:textSize="15sp"
+            android:maxLines="1"
+            android:layout_marginStart="10dp"
+            android:ellipsize="end"
+            android:visibility="gone"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toStartOf="@id/star"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/rounded_corners"
+            app:layout_constraintTop_toBottomOf="@+id/title" />
+
+        <TextView
+            android:id="@+id/movie_description"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/material_color_blue_grey_300"
+            android:textSize="20sp"
+            android:ellipsize="end"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="6dp"
+            app:layout_constraintStart_toStartOf="parent"
+
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/genreContainer" />
+
+
+        <LinearLayout
+            android:id="@+id/genreContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:orientation="horizontal"
+            android:layout_marginBottom="5dp"
+
+            android:visibility="gone"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/movie_description"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/release_date"/>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout >
+
+    </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
