--- a/MovieProject/app/src/main/res/layout/fragment_discovered.xml
+++ b/MovieProject/app/src/main/res/layout/fragment_discovered.xml
@@ -14,6 +14,7 @@
         android:background="@color/White_100"
         android:elevation="4dp"
         android:theme="@style/AppTheme.Toolbar"
+        app:navigationIcon="?attr/homeAsUpIndicator"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
@@ -31,6 +32,8 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
+
+
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -56,5 +59,6 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
