--- a/MovieProject/app/src/main/res/values/colors.xml
+++ b/MovieProject/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="windowBackground">#031F37</color>
+    <color name="navigationIconColor">#ffffff</color>
 
     <color name="White_100">#ffffff</color>
     <color name="White_95">#F2FFFFFF</color>
