--- a/MovieProject/app/src/main/res/layout/fragment_cast.xml
+++ b/MovieProject/app/src/main/res/layout/fragment_cast.xml
@@ -43,31 +43,24 @@
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <ImageView
-                android:id="@+id/detail_photo"
+                android:id="@+id/backdrop_cast_photo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/moviephoto"
                 android:foreground="@drawable/gradient_foreground"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf = "parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
 
-            <TextView
-                android:id="@+id/cast"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="22sp"
-                android:maxLines="2"
-                android:text="@string/cast"
-                android:ellipsize="end"
-                android:visibility="gone"
-                android:layout_marginEnd="10dp"
-                android:textStyle="bold"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@id/movie_description"
-                app:layout_constraintStart_toStartOf="parent"/>
+
+            <ImageView
+                android:id="@+id/cast_photo"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                app:layout_constraintTop_toTopOf="@id/backdrop_cast_photo"
+                app:layout_constraintStart_toStartOf = "parent"
+                app:layout_constraintBottom_toBottomOf="@id/divider2"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
 
 
@@ -79,29 +72,10 @@
                 android:layout_height="match_parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cast"
+                app:layout_constraintTop_toBottomOf="@+id/movies"
                 app:layout_constraintStart_toStartOf="parent"
                 android:orientation="horizontal"
                 />
-
-
-            <ImageButton
-                android:id="@+id/heart_in_detail"
-                android:src="@drawable/heart_shape_outlined"
-                android:layout_width="40dp"
-                android:visibility="gone"
-                android:layout_height="40dp"
-                android:background="@color/White_100"
-                android:scaleType="centerCrop"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-
-                app:layout_constraintTop_toBottomOf="@id/detail_photo"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="6dp"
-                android:contentDescription="heart" />
-
 
             <TextView
                 android:id="@+id/title"
@@ -114,62 +88,89 @@
                 android:layout_marginEnd="10dp"
                 android:textStyle="bold"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@id/detail_photo"
-                app:layout_constraintEnd_toStartOf="@id/heart_in_detail"
+                android:layout_marginTop="30dp"
+                app:layout_constraintTop_toBottomOf="@id/backdrop_cast_photo"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
 
-            <ImageView
-                android:id="@+id/star"
-                android:layout_width="28dp"
-                android:layout_height="28dp"
-                android:contentDescription="star"
-                android:foreground="@drawable/star_outlined"
-                android:gravity="center_horizontal"
-                app:layout_constraintStart_toEndOf="@id/release_date"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
+            <TextView
+                android:id="@+id/career"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:visibility="gone"
+                android:layout_marginEnd="10dp"
+                android:textStyle="bold"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="30dp"
                 app:layout_constraintTop_toBottomOf="@id/title"
-                android:layout_marginBottom="6dp"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+
+            <View
+                android:id="@+id/divider2"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="30dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/career"
+                android:background="?android:attr/listDivider"
+                />
 
 
             <TextView
-                android:id="@+id/vote_text"
+                android:id="@+id/age"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="Age"
                 android:textSize="15sp"
                 android:textColor="@color/material_color_blue_grey_500"
-                app:layout_constraintStart_toEndOf="@id/star"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/title"
                 android:layout_marginStart="3dp"
                 android:layout_marginTop="10dp"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@id/title"
+                android:layout_marginEnd="6dp"
+                android:layout_marginBottom="2dp"/>
+
+            <TextView
+                android:id="@+id/from"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="From"
+                android:textSize="15sp"
+                android:textColor="@color/material_color_blue_grey_500"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/age"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
+                android:layout_marginEnd="6dp"
+                android:layout_marginBottom="2dp"/>
+
+            <TextView
+                android:id="@+id/biography_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="From"
+                android:textSize="15sp"
+                android:textColor="@color/material_color_blue_grey_500"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/from"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="10dp"
+                android:visibility="gone"
                 android:layout_marginEnd="6dp"
                 android:layout_marginBottom="2dp"/>
 
 
             <TextView
-                android:id="@+id/release_date"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:textColor="@color/White_100"
-                android:textSize="15sp"
-                android:maxLines="1"
-                android:layout_marginStart="10dp"
-                android:ellipsize="end"
-                android:visibility="gone"
-                android:layout_marginEnd="10dp"
-                android:layout_marginTop="10dp"
-                app:layout_constraintEnd_toStartOf="@id/star"
-                app:layout_constraintStart_toStartOf="parent"
-                android:background="@drawable/rounded_corners"
-                app:layout_constraintTop_toBottomOf="@+id/title" />
-
-            <TextView
-                android:id="@+id/movie_description"
+                android:id="@+id/biography"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
@@ -182,25 +183,25 @@
                 app:layout_constraintStart_toStartOf="parent"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/genreContainer" />
+                app:layout_constraintTop_toBottomOf="@+id/biography_text" />
 
 
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/genreContainer"
-                android:layout_width="match_parent"
+
+            <TextView
+                android:id="@+id/movies"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:maxLines="2"
+                android:text="Movies"
+                android:ellipsize="end"
                 android:visibility="gone"
+                android:layout_marginEnd="10dp"
+                android:textStyle="bold"
                 android:layout_marginStart="10dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginTop="10dp"
-                app:singleSelection="false"
-                app:chipSpacingVertical="5dp"
-                app:chipSpacingHorizontal="3dp"
-                app:layout_constraintBottom_toTopOf="@+id/movie_description"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/release_date"/>
-
-
+                app:layout_constraintTop_toBottomOf="@id/biography"
+                app:layout_constraintStart_toStartOf="parent"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout >
