--- a/MovieProject/app/src/main/res/layout/fragment_cast.xml
+++ b/MovieProject/app/src/main/res/layout/fragment_cast.xml
@@ -25,18 +25,19 @@
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-
-
             <androidx.appcompat.widget.Toolbar
+
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="#00000000"
                 android:elevation="4dp"
                 android:theme="@style/AppTheme.Toolbar"
+                android:visibility="gone"
                 app:navigationIcon="?attr/homeAsUpIndicator"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -46,17 +47,17 @@
                 android:id="@+id/backdrop_cast_photo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:foreground="@drawable/gradient_foreground"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf = "parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-
-
             <ImageView
                 android:id="@+id/cast_photo"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
+                android:visibility="gone"
                 app:layout_constraintTop_toTopOf="@id/backdrop_cast_photo"
                 app:layout_constraintStart_toStartOf = "parent"
                 app:layout_constraintBottom_toBottomOf="@id/divider2"
@@ -87,6 +88,7 @@
                 android:visibility="gone"
                 android:layout_marginEnd="10dp"
                 android:textStyle="bold"
+                android:gravity="center"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="30dp"
                 app:layout_constraintTop_toBottomOf="@id/backdrop_cast_photo"
@@ -105,7 +107,8 @@
                 android:layout_marginEnd="10dp"
                 android:textStyle="bold"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
                 app:layout_constraintTop_toBottomOf="@id/title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -116,6 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="30dp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/career"
@@ -124,15 +128,14 @@
 
 
             <TextView
-                android:id="@+id/age"
+                android:id="@+id/born"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Age"
-                android:textSize="15sp"
+                android:textSize="13sp"
+                android:layout_marginStart="10dp"
                 android:textColor="@color/material_color_blue_grey_500"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/title"
-                android:layout_marginStart="3dp"
+                app:layout_constraintTop_toBottomOf="@+id/divider2"
                 android:layout_marginTop="10dp"
                 android:visibility="gone"
                 android:layout_marginEnd="6dp"
@@ -142,13 +145,13 @@
                 android:id="@+id/from"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="From"
-                android:textSize="15sp"
+                android:textSize="13sp"
+                android:maxLines="2"
                 android:textColor="@color/material_color_blue_grey_500"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/age"
-                android:layout_marginStart="3dp"
-                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/born"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
                 android:visibility="gone"
                 android:layout_marginEnd="6dp"
                 android:layout_marginBottom="2dp"/>
@@ -157,12 +160,13 @@
                 android:id="@+id/biography_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="From"
-                android:textSize="15sp"
+                android:text="@string/biography"
+                android:textSize="20sp"
+                android:layout_marginStart="10dp"
+                android:textStyle="bold"
                 android:textColor="@color/material_color_blue_grey_500"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/from"
-                android:layout_marginStart="3dp"
                 android:layout_marginTop="10dp"
                 android:visibility="gone"
                 android:layout_marginEnd="6dp"
@@ -175,7 +179,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:textColor="@color/material_color_blue_grey_300"
-                android:textSize="19sp"
+                android:textSize="17sp"
                 android:ellipsize="end"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="6dp"
@@ -191,9 +195,9 @@
                 android:id="@+id/movies"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="22sp"
-                android:maxLines="2"
+                android:textSize="20sp"
                 android:text="Movies"
+                android:textColor="@color/material_color_blue_grey_500"
                 android:ellipsize="end"
                 android:visibility="gone"
                 android:layout_marginEnd="10dp"
