--- a/MovieProject/app/src/main/res/layout/fragment_detail.xml
+++ b/MovieProject/app/src/main/res/layout/fragment_detail.xml
@@ -21,10 +21,12 @@
 
 
     <ScrollView
+
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -74,12 +76,41 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:visibility="gone"
                 android:layout_marginTop="6dp"
-                android:id="@+id/recycler"
+                android:id="@+id/recyclerCast"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cast"
+                app:layout_constraintStart_toStartOf="parent"
+                android:orientation="horizontal"
+                />
+
+            <TextView
+                android:id="@+id/recommendations"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:maxLines="2"
+                android:text="@string/recommendations"
+                android:ellipsize="end"
+                android:visibility="gone"
+                android:layout_marginEnd="10dp"
+                android:textStyle="bold"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/recyclerCast"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:visibility="gone"
+                android:layout_marginTop="6dp"
+                android:id="@+id/recyclerMovies"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cast"
+                app:layout_constraintTop_toBottomOf="@+id/recommendations"
                 app:layout_constraintStart_toStartOf="parent"
                 android:orientation="horizontal"
                 />
