--- a/MovieProject/app/src/main/res/layout/fragment_favorites.xml
+++ b/MovieProject/app/src/main/res/layout/fragment_favorites.xml
@@ -45,6 +45,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <include
+        layout="@layout/placeholder"
+        android:id="@+id/placeholder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
