--- a/MovieProject/app/src/main/res/values-night/themes.xml
+++ b/MovieProject/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Deneme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/Black_0</item>
-        <item name="colorPrimaryVariant">@color/material_color_grey_50</item>
-        <item name="colorOnPrimary">@color/White_0</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/Black_0</item>
-        <item name="colorSecondaryVariant">@color/material_color_grey_50</item>
-        <item name="colorOnSecondary">@color/White_0</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
+        <item name="colorPrimary">@color/material_color_teal_A400</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/material_color_blue_grey_500</item>
+        <item name="android:windowBackground">@color/material_color_grey_900</item>
     </style>
 </resources>
